alignment fixed

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 .title-bar {
-  height: 7vh;
+  height: 6vh;
   background-color: #107d40;
   color: white;
   font-size: 17px;
@@ -81,34 +81,37 @@ body {
 }
 .sheet-bar {
   background-color: #f4f4f5;
-  height: 7vh;
+  height: 6vh;
   display: flex;
   align-items: center;
 }
 .data-container {
-  height: 70vh;
+  height: 71vh;
   display: flex;
   flex-wrap: wrap;
 }
 
 .select-all {
-  width: 30px;
+  width: 37px;
   height: 30px;
   border: 1px solid black;
 }
 .column-name-container {
-  width: calc(100vh -30px);
+  width: calc(100% - 37px);
   height: 30px;
   border: 1px solid black;
+  display: flex;
+  align-items: center;
 }
 .row-name-container {
-  width: 30px;
-  width: calc(75vh-30px);
+  width: 37px;
+  height: calc(71vh - 30px);
   border: 1px solid black;
 }
+
 .input-cell-container {
-  width: calc(100vh-30px);
-  height: calc(75vh-30px);
+  width: calc(100% - 37px);
+  height: calc(71vh - 30px);
   border: 1px solid black;
 }
 .icon-left-scroll,
@@ -130,9 +133,18 @@ body {
   margin-bottom: 0.3%;
   padding: 1%;
   cursor: pointer;
-  border-bottom: 6px solid #107d40;
+  border-bottom: 3px solid #107d40;
   padding-bottom: 0.5%;
 }
 .sheet-tab-container:hover {
   background-color: #e5e4e2;
+}
+.column-name {
+  width: 50px;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  margin-left: 2.5%;
+  border-right: 2px solid lightgray;
+  font-weight: bold;
 }
